--- a/face/package.json
+++ b/face/package.json
@@ -21,9 +21,17 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.4",
+    "@jimp/custom": "^0.22.12",
+    "@jimp/plugin-resize": "^1.6.0",
+    "@jimp/types": "^1.6.0",
+    "esbuild": "^0.23.1",
     "express": "^4.18.2",
+    "ml-kmeans": "^6.0.0",
+    "node-vibrant": "^3.2.1-alpha.1",
+    "palette.js": "^0.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "vite": "^5.4.5",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
