--- a/face/package.json
+++ b/face/package.json
@@ -27,7 +27,7 @@
     "esbuild": "^0.23.1",
     "express": "^4.18.2",
     "ml-kmeans": "^6.0.0",
-    "node-vibrant": "^3.2.1-alpha.1",
+    "node-vibrant": "^3.1.6",
     "palette.js": "^0.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
