--- a/src/my-app/package.json
+++ b/src/my-app/package.json
@@ -11,11 +11,16 @@
     "cors": "^2.8.5",
     "firebase": "^11.0.1",
     "papaparse": "^5.4.1",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^4.10.38",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
+    "react-contenteditable": "^3.3.7",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
