--- a/src/my-app/package.json
+++ b/src/my-app/package.json
@@ -9,18 +9,24 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "cors": "^2.8.5",
+    "csv-parser": "^3.1.0",
+    "express": "^4.21.2",
+    "file-saver": "^2.0.5",
     "firebase": "^11.0.1",
+    "jspdf": "^2.5.2",
     "papaparse": "^5.4.1",
     "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^4.10.38",
+    "pdfjs-dist": "^2.16.105",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-contenteditable": "^3.3.7",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "^5.0.1",
+    "sqlite3": "^5.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,5 +52,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "react-scripts": "^5.0.1",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0",
+    "worker-loader": "^3.0.8"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
