--- a/src/my-app/package.json
+++ b/src/my-app/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^4.4.7",
     "cors": "^2.8.5",
     "firebase": "^11.0.1",
+    "ng2-charts": "^8.0.0",
     "papaparse": "^5.4.1",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.10.38",
@@ -46,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^5.2.0"
   }
 }
