--- a/src/my-app/package.json
+++ b/src/my-app/package.json
@@ -13,6 +13,7 @@
     "express": "^4.21.2",
     "file-saver": "^2.0.5",
     "firebase": "^11.0.1",
+    "jspdf": "^2.5.2",
     "ng2-charts": "^8.0.0",
     "papaparse": "^5.4.1",
     "pdf-lib": "^1.17.1",
@@ -26,6 +27,7 @@
     "react-dropzone": "^14.3.5",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^6.28.0",
+    "react-scripts": "^5.0.1",
     "sqlite3": "^5.1.7",
     "web-vitals": "^2.1.4"
   },
