--- a/src/my-app/package.json
+++ b/src/my-app/package.json
@@ -57,6 +57,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.26.8",
+    "@babel/preset-env": "^7.26.8",
+    "@babel/preset-react": "^7.26.3",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-mock-axios": "^4.8.0",
     "webpack-dev-server": "^5.2.0",
     "worker-loader": "^3.0.8"
   }
