--- a/src/my-app/.gitlab-ci.yml
+++ b/src/my-app/.gitlab-ci.yml
@@ -41,3 +41,7 @@ deploy:
     - serve -s build
   only:
     - main # Run this only when pushing to main branch
+    - new-branch
+
+include:
+  - local: "src/my-app/.gitlab-ci.yml"
