Include CI/CD config from my-app
Former-commit-id: ec97349c09fd8abbe2e3111a3f14211acc2cfb32

--- a/src/my-app/.gitlab-ci.yml
+++ b/src/my-app/.gitlab-ci.yml
@@ -41,3 +41,8 @@ deploy:
     - serve -s build
   only:
     - main # Run this only when pushing to main branch
+    - new 
+  
+  include:
+  - local: "src/my-app/.gitlab-ci.yml"
+
