--- a/src/my-app/.gitlab-ci.yml
+++ b/src/my-app/.gitlab-ci.yml
@@ -1,48 +1,20 @@
-image: node:18 # Use Node.js 18 image
+image: mcr.microsoft.com/playwright:v1.38.0-focal  # Official Playwright image
 
 stages:
-  - install
   - test
-  - build
-  - deploy
 
 cache:
   paths:
-    - node_modules/ # Cache dependencies to speed up builds
-
-before_script:
-  - echo "Installing dependencies..."
-  - npm install
+    - node_modules/
 
 test:
   stage: test
   script:
-    - echo "Running Jest tests..."
-    - npm test -- --ci --coverage # Run Jest with coverage
+    - npm install
+    - npx playwright install --with-deps
+    - npx playwright test  # Runs tests in headless mode
   artifacts:
+    when: always
     paths:
-      - coverage/ # Save test coverage reports
-    when: always # Save even if tests fail
-
-build:
-  stage: build
-  script:
-    - echo "Building React App..."
-    - npm run build
-  artifacts:
-    paths:
-      - build/ # Save the build folder
-
-deploy:
-  stage: deploy
-  script:
-    - echo "Deploying application..."
-    - npm install -g serve
-    - serve -s build
-  only:
-    - main # Run this only when pushing to main branch
-    - new 
-  
-  include:
-  - local: "src/my-app/.gitlab-ci.yml"
-
+      - test-results/
+    expire_in: 1 day
