--- a/src/my-app/package.json
+++ b/src/my-app/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
@@ -58,12 +56,20 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.8",
-    "@babel/preset-env": "^7.26.8",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
+    "@playwright/test": "^1.51.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "babel-jest": "^29.7.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-mock-axios": "^4.8.0",
     "webpack-dev-server": "^5.2.0",
     "worker-loader": "^3.0.8"
-  }
+  },
+  "transformIgnorePatterns": [
+    "node_modules/(?!(axios)/)"
+  ]
 }
