--- a/src/my-app/.gitlab-ci.yml
+++ b/src/my-app/.gitlab-ci.yml
@@ -9,15 +9,18 @@ cypress-run:
     - npx cypress run --config-file cypress.config.js
   artifacts:
     when: always
+    expire_in: 1 week  
     paths:
       - test-results/
       - cypress/screenshots/
       - cypress/videos/
+
   only:
     - main
     - new-branch
 
-  cache:
+cache:
+  key: npm-cache
   paths:
     - node_modules/
 
