--- a/src/my-app/.gitlab-ci.yml
+++ b/src/my-app/.gitlab-ci.yml
@@ -6,18 +6,20 @@ cypress-run:
   stage: test
   script:
     - npm install
-    - npx cypress run --config-file cypress.config.js
+    - npx cypress run --config cypress.config.js
   artifacts:
     when: always
+    expire_in: 1 week
     paths:
       - test-results/
       - cypress/screenshots/
       - cypress/videos/
+
   only:
     - main
     - new-branch
 
-  cache:
+cache:
+  key: npm-cache
   paths:
     - node_modules/
-
