Fix Cypress config path in GitLab CI
Former-commit-id: 7a4d34144141eb6fdb490829b09555af51b6df43

--- a/src/my-app/.gitlab-ci.yml
+++ b/src/my-app/.gitlab-ci.yml
@@ -6,20 +6,16 @@ cypress-run:
   stage: test
   script:
     - npm install
-    - npx cypress run --config cypress.config.js
+    - npx cypress run --config-file=cypress.config.js
   artifacts:
     when: always
-    expire_in: 1 week
     paths:
       - test-results/
       - cypress/screenshots/
       - cypress/videos/
-
   only:
     - main
     - new-branch
-
-cache:
-  key: npm-cache
-  paths:
-    - node_modules/
+  cache:
+    paths:
+      - node_modules/
