fix: cypress tests chaged for auth
Former-commit-id: 92e6afcba794a871e168e99754ef190cb4235f2d

--- a/src/my-app/.gitlab-ci.yml
+++ b/src/my-app/.gitlab-ci.yml
@@ -6,7 +6,7 @@ cypress-run:
   stage: test
   script:
     - npm install
-    - npx cypress run --config-file=cypress.config.js
+    - npx cypress run
   artifacts:
     when: always
     paths:
@@ -16,6 +16,4 @@ cypress-run:
   only:
     - main
     - new-branch
-  cache:
-    paths:
-      - node_modules/
+
