fix: changed git test
Former-commit-id: 25ee06a70245efc254d98106773ccf30d8eded79

--- a/src/my-app/.gitlab-ci.yml
+++ b/src/my-app/.gitlab-ci.yml
@@ -6,14 +6,7 @@ cypress-run:
   stage: test
   script:
     - npm install
-    - npx cypress run
-  artifacts:
-    when: always
-    paths:
-      - test-results/
-      - cypress/screenshots/
-      - cypress/videos/
+    - npx cypress run  # No need for --config-file if cypress.config.js is at root
   only:
     - main
     - new-branch
-
