--- a/src/my-app/.gitlab-ci.yml
+++ b/src/my-app/.gitlab-ci.yml
@@ -5,8 +5,13 @@ cypress-run:
   image: cypress/included:14.1.0
   stage: test
   script:
-    - npm install
-    - npx cypress run  # No need for --config-file if cypress.config.js is at root
+    - npm ci
+    - npx cypress run
   only:
     - main
     - new-branch
+  artifacts:
+    when: always
+    paths:
+      - cypress/screenshots/
+      - cypress/videos/
