--- a/src/my-app/.gitlab-ci.yml
+++ b/src/my-app/.gitlab-ci.yml
@@ -5,13 +5,14 @@ cypress-run:
   image: cypress/included:14.1.0
   stage: test
   script:
-    - npm ci
-    - npx cypress run
+    - |
+      #!/usr/bin/env bash
+      set -euxo pipefail
+
+      echo "DEBUG: Running Cypress with minimal script block..."
+
+      npm ci
+      npx cypress run
   only:
     - main
     - new-branch
-  artifacts:
-    when: always
-    paths:
-      - cypress/screenshots/
-      - cypress/videos/
