--- a/src/my-app/.gitlab-ci.yml
+++ b/src/my-app/.gitlab-ci.yml
@@ -5,14 +5,7 @@ cypress-run:
   image: cypress/included:14.1.0
   stage: test
   script:
-    - |
-      #!/usr/bin/env bash
-      set -euxo pipefail
-
-      echo "DEBUG: Running Cypress with minimal script block..."
-
-      npm ci
-      npx cypress run
+    - npx cypress run  
   only:
     - main
     - new-branch
