--- a/src/my-app/package.json
+++ b/src/my-app/package.json
@@ -6,6 +6,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "core-js": "^3.41.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.1.0",
     "express": "^4.21.2",
