--- a/src/my-app/package.json
+++ b/src/my-app/package.json
@@ -28,6 +28,7 @@
     "react-pdf": "^9.2.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "sqlite3": "^5.1.7",
     "web-vitals": "^2.1.4"
   },
