--- a/src/my-app/package.json
+++ b/src/my-app/package.json
@@ -31,6 +31,10 @@
     "sqlite3": "^5.1.7",
     "web-vitals": "^2.1.4"
   },
+  "browser": {
+  "axios": "axios/dist/browser/axios.cjs"
+},
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
