--- a/src/my-app/.gitlab-ci.yml
+++ b/src/my-app/.gitlab-ci.yml
@@ -2,12 +2,15 @@ stages:
   - test
 
 cypress-run:
-  image:
-    name: cypress/included:14.1.0
-    entrypoint: [""]   # <-- Forces a blank entrypoint
+  image: cypress/included:14.1.0
   stage: test
   script:
-    - npm install
+    - npm ci
+    # 1. Start the React app in background
+    - npm run start &
+    # 2. Wait for the app to be up (need a "wait" tool)
+    - npx wait-on http://localhost:3000
+    # 3. Run Cypress
     - npx cypress run
   only:
     - main
