--- a/src/my-app/.gitlab-ci.yml
+++ b/src/my-app/.gitlab-ci.yml
@@ -5,13 +5,11 @@ cypress-run:
   image: cypress/included:14.1.0
   stage: test
   script:
+    - cd src/my-app              
     - npm ci
-    # 1. Start the React app in background
-    - npm run start &
-    # 2. Wait for the app to be up (need a "wait" tool)
-    - npx wait-on http://localhost:3000
-    # 3. Run Cypress
-    - npx cypress run
+    - npm run start &            
+    - npx wait-on http://localhost:3000  
+    - npx cypress run           
   only:
     - main
     - new-branch
