--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,9 @@
+stages:
+  - test
+
 cypress-run:
   image: cypress/included:14.1.0
-  stage: test
+  stage: test 
   working_directory: src/my-app
   script:
     - npm ci
