--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,13 @@
 stages:
   - test
 
+debug-job:
+  stage: test
+  script:
+    - echo "CI pipeline is working!"
+  only:
+    - clean-ci
+
 cypress-run:
   image: cypress/included:14.1.0
   stage: test 
@@ -11,4 +18,4 @@ cypress-run:
     - npx wait-on http://localhost:3000
     - npx cypress run
   only:
-    - branches
+    - clean-ci
