--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,9 @@
 stages:
   - test
 
-debug-job:
-  stage: test
-  script:
-    - echo "CI pipeline is working!"
-  only:
-    - clean-ci
-
 cypress-run:
   image: cypress/included:14.1.0
-  stage: test 
+  stage: test
   working_directory: src/my-app
   script:
     - npm ci
@@ -18,4 +11,6 @@ cypress-run:
     - npx wait-on http://localhost:3000
     - npx cypress run
   only:
+    - main
+    - new-branch
     - clean-ci
