update gitlab-ci.yml file
Former-commit-id: b147173ed462bec6b369063cfac54ae59923cf82

--- a/src/my-app/.gitlab-ci.yml
+++ b/src/my-app/.gitlab-ci.yml
@@ -7,6 +7,6 @@ cypress-run:
   script:
     - cd src/my-app
     - npm ci
-    - npm run start &
-    - npx wait-on http://localhost:3000
-    - npx cypress run
+    - npm run start &  
+    - npx wait-on http://localhost:3000 
+    - npx cypress run --config-file cypress.config.js 
