--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,20 @@
+image: cypress/included:14.1.0
+
 stages:
   - test
 
 cypress-run:
-  image: cypress/included:14.1.0
   stage: test
-  working_directory: src/my-app
+  before_script:
+    - apt-get update && apt-get install -y python3 python3-pip
   script:
+    - cd src/my-app
     - npm ci
-    - npm run start &
+    - npm run start &                     # Frontend
+    - cd ../../Online_Job_Posting_Database
+    - python3 app.py &                   # Backend
+    - cd ../src/my-app
     - npx wait-on http://localhost:3000
     - npx cypress run
   only:
-    - main
-    - new-branch
     - clean-ci
