--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,34 @@
 image: cypress/included:14.1.0
 
 stages:
+  - install
   - test
 
-cypress-run:
-  stage: test
-  before_script:
-    - apt-get update && apt-get install -y python3 python3-pip
+variables:
+  FRONTEND_DIR: src/my-app
+  BACKEND_DIR: src/my-app/src/backend
+
+cache:
+  paths:
+    - node_modules/
+    - $FRONTEND_DIR/node_modules
+
+before_script:
+  - apt-get update && apt-get install -y python3 python3-pip
+  - pip3 install -r $BACKEND_DIR/requirements.txt
+
+install-frontend:
+  stage: install
   script:
-    - cd src/my-app
+    - cd $FRONTEND_DIR
     - npm ci
-    - npm run start &                     # Frontend
-    - cd ../../Online_Job_Posting_Database
-    - python3 app.py &                   # Backend
-    - cd ../src/my-app
+
+cypress-tests:
+  stage: test
+  script:
+    - cd $FRONTEND_DIR
+    - npm run start &                 # React starts on :3000
+    - cd $BACKEND_DIR && python3 app.py &  # Flask backend
     - npx wait-on http://localhost:3000
+    - cd $FRONTEND_DIR
     - npx cypress run
-  only:
-    - clean-ci
