--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,4 +31,4 @@ cypress-tests:
     - cd $BACKEND_DIR && python3 app.py &  # Flask backend
     - npx wait-on http://localhost:3000
     - cd $FRONTEND_DIR
-    - npx cypress run
+    - npm cypress run
