--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,14 @@
-image: cypress/included:14.1.0
-
-stages:
-  - test
-
 cypress-run:
+  image: cypress/included:14.1.0
   stage: test
-  working_directory: src/my-app
   script:
+    - echo "Starting Cypress test run"
     - npm ci
-    - npm run start &             # Start React app
-    - npx wait-on http://localhost:3000  # Wait until it's live
-    - npx cypress run             # Run your e2e tests
+    - npm run start &
+    - npx wait-on http://localhost:3000
+    - npx cypress run
+  variables:
+    SHELL: /bin/bash   
   only:
     - main
     - clean-ci
