--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,19 @@
+image: cypress/included:14.1.0
+
+stages:
+  - test
+
 cypress-run:
-  image: cypress/included:14.1.0
   stage: test
+  working_directory: src/my-app
   script:
-    - echo "Starting Cypress test run"
+    - echo "Running Cypress tests..."          # Debug line
     - npm ci
     - npm run start &
     - npx wait-on http://localhost:3000
     - npx cypress run
   variables:
-    SHELL: /bin/bash   
+    SHELL: /bin/bash       
   only:
     - main
     - clean-ci
