--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,19 +6,27 @@ stages:
 cypress-run:
   stage: test
   script:
-    - echo "Starting Flask backend..."
-    - cd src/my-app/src/backend
-    - python app.py &
-    - cd ../../..
+  - echo "Debugging environment..."
+  - which bash
+  - echo $SHELL
+  - echo $PATH
+  - node -v
+  - npm -v
+  - npx cypress --version
 
-    - echo "Starting React frontend..."
-    - cd src/my-app
-    - npm ci
-    - npm run start &
-    - npx wait-on http://localhost:3000 http://localhost:5000
+  - echo "Starting Flask backend..."
+  - cd src/my-app/src/backend
+  - python app.py &
+  - cd ../../..
 
-    - echo "Running Cypress tests..."
-    - npx cypress run --config baseUrl=http://localhost:3000
+  - echo "Starting React frontend..."
+  - cd src/my-app
+  - npm ci
+  - npm run start &
+  - npx wait-on http://localhost:3000 http://localhost:5000
+
+  - echo "Running Cypress tests..."
+  - npx cypress run --config baseUrl=http://localhost:3000
   only:
     - main
     - clean-ci
