Fix Cypress configuration in GitLab CI/CD3
Former-commit-id: 654704bbb276466af80cde66e3cde2bbdf61f414

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,27 +6,30 @@ stages:
 cypress-run:
   stage: test
   script:
-  - echo "Debugging environment..."
-  - which bash
-  - echo $SHELL
-  - echo $PATH
-  - node -v
-  - npm -v
-  - npx cypress --version
+    - echo "Debugging environment..."
+    - which bash
+    - echo $SHELL
+    - echo $PATH
+    - node -v
+    - npm -v
+    - npx cypress --version
 
-  - echo "Starting Flask backend..."
-  - cd src/my-app/src/backend
-  - python app.py &
-  - cd ../../..
+    # Start Flask backend
+    - echo "Starting Flask backend..."
+    - cd src/my-app/src/backend
+    - python app.py &
+    - cd ../../..
 
-  - echo "Starting React frontend..."
-  - cd src/my-app
-  - npm ci
-  - npm run start &
-  - npx wait-on http://localhost:3000 http://localhost:5000
+    # Start React frontend
+    - echo "Starting React frontend..."
+    - cd src/my-app
+    - npm ci
+    - npm run start &
+    - npx wait-on http://localhost:3000 http://localhost:5000
 
-  - echo "Running Cypress tests..."
-  - npx cypress run --config baseUrl=http://localhost:3000
+    # Run Cypress tests
+    - echo "Running Cypress tests..."
+    - npx cypress run --config baseUrl=http://localhost:3000
   only:
     - main
     - clean-ci
