--- a/src/my-app/package.json
+++ b/src/my-app/package.json
@@ -9,6 +9,7 @@
     "core-js": "^3.41.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.1.0",
+    "docx": "^9.3.0",
     "express": "^4.21.2",
     "file-saver": "^2.0.5",
     "firebase": "^11.0.1",
