--- a/src/my-app/package.json
+++ b/src/my-app/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
@@ -10,6 +14,7 @@
     "core-js": "^3.41.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.1.0",
+    "date-fns": "^4.1.0",
     "docx": "^9.3.0",
     "express": "^4.21.2",
     "file-saver": "^2.0.5",
@@ -22,6 +27,7 @@
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.0.375",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.18.0",
     "react-chartjs-2": "^5.3.0",
     "react-contenteditable": "^3.3.7",
     "react-dnd": "^16.0.1",
