--- a/src/my-app/package.json
+++ b/src/my-app/package.json
@@ -50,7 +50,7 @@
   },
   "scripts": {
     "eject": "react-scripts eject",
-    "start": "craco start",
+    "start": "react-scripts start",
     "build": "craco build",
     "test": "craco test"
   },
