--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,33 +4,34 @@ stages:
 e2e-tests:
   stage: test
   image: cypress/included:14.3.0
-  services:
-    - name: node:18
   script:
     - echo "Installing backend deps"
-    - cd src/my-app/src/backend
+    - cd src/my-app/src/backend || exit
     - python3 -m venv venv
     - source venv/bin/activate
-    - pip install -r requirements.txt &
+    - pip install -r requirements.txt
     - BACK_PID=$!
-    - cd ../../../..
+    - cd ../../../.. || exit
+
     - echo "Installing frontend deps"
-    - cd src/my-app
+    - cd src/my-app || exit
     - npm ci
     - npm start & 
     - FRONT_PID=$!
-    - cd ../..
+    - cd ../.. || exit
+
     - echo "Waiting for servers"
     - npx wait-on http://localhost:3000/login http://localhost:5000/ping
+
     - echo "Running Cypress"
     - npx cypress run --config baseUrl=http://localhost:3000
-    - echo "Killing servers"
-    - kill $BACK_PID
-    - kill $FRONT_PID
+
+    - echo "Killing backend and frontend"
+    - kill $BACK_PID || echo "Backend not running"
+    - kill $FRONT_PID || echo "Frontend not running"
   artifacts:
     when: always
     paths:
       - cypress/videos/
       - cypress/screenshots/
     expire_in: 1 week
-
