--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,41 +9,28 @@ e2e-tests:
     - echo "Installing frontend dependencies"
     - cd src/my-app
     - npm ci
-
-    - |
-      echo "Starting frontend"
-      npm start &
-      FRONT_PID=$!
+    - echo "Starting frontend"
+    - npm start & 
+    - FRONT_PID=$!
     - cd ../..
-
     - echo "Starting mock backend"
     - cd src/my-app/src/backend
     - python3 -m pip install --no-cache-dir -r requirements.txt
-    - |
-      python3 app.py &
-      BACK_PID=$!
+    - python3 app.py & 
+    - BACK_PID=$!
     - cd ../../..
-
     - echo "Waiting for servers to be ready"
     - npx wait-on http://localhost:3000/login http://localhost:5000/ping
-
-    - |
-      echo "Running as: $(whoami)"
-      echo "Git config email:"
-      git config user.email || echo "No email set"
-
+    - whoami
+    - echo "Git config email:"
+    - git config user.email || echo "No email set"
     - echo "Running Cypress tests"
-    - echo "Cypress would run here"
     - echo "About to run Cypress with config"
-    - echo "Command: npx cypress run --config '{\"baseUrl\":\"http://localhost:3000\"}'"
-    - npx cypress run --config '{"baseUrl":"http://localhost:3000"}'
-
-
+    - npx cypress run --config baseUrl=http://localhost:3000
 
     - echo "Cleaning up"
-    - |
-      kill $BACK_PID || echo "Backend already stopped"
-      kill $FRONT_PID || echo "Frontend already stopped"
+    - kill $BACK_PID || echo "Backend already stopped"
+    - kill $FRONT_PID || echo "Frontend already stopped"
   artifacts:
     when: always
     paths:
