--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,40 +6,34 @@ e2e-tests:
   image: cypress/included:14.3.0
   script:
     - set -e
-    - echo "Installing frontend dependencies"
+    - echo "Installing dependencies and starting servers..."
+    
+    # Frontend setup
     - cd src/my-app
     - npm ci
-
-    - |
-      echo "Starting frontend"
-      npm start &
-      FRONT_PID=$!
+    - npm start &
+    - FRONT_PID=$!
     - cd ../..
-
-    - echo "Starting mock backend"
+    
+    # Backend setup
     - cd src/my-app/src/backend
     - python3 -m pip install --no-cache-dir -r requirements.txt
-    - |
-      python3 app.py &
-      BACK_PID=$!
+    - python3 app.py &
+    - BACK_PID=$!
     - cd ../../..
-
-    - echo "Waiting for servers to be ready"
-    - npx wait-on http://localhost:3000/login http://localhost:5000/ping
-
-    - |
-      echo "Running as: $(whoami)"
-      echo "Git config email:"
-      git config user.email || echo "No email set"
-
-    - echo "Running Cypress tests"
-    - cd src/my-app 
-    - npx cypress run --config baseUrl=http://localhost:3000
-
-    - echo "Cleaning up"
-    - |
-      kill $BACK_PID || echo "Backend already stopped"
-      kill $FRONT_PID || echo "Frontend already stopped"
+    
+    # Wait for servers
+    - npx wait-on http://localhost:3000 http://localhost:5000/ping
+    
+    # Run Cypress - 
+    - cd src/my-app
+    - CYPRESS_BASE_URL=http://localhost:3000 npx cypress run
+    - cd ../..
+    
+    # Cleanup
+    - kill $BACK_PID || echo "Backend already stopped"
+    - kill $FRONT_PID || echo "Frontend already stopped"
+    
   artifacts:
     when: always
     paths:
