--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,18 +5,20 @@ e2e-tests:
   stage: test
   image: cypress/included:14.3.0
   script:
-    - cd src/my-app
-    - npm start &
-    - FRONT_PID=$!
-    - cd src/backend
-    - python3 app.py &
-    - BACK_PID=$!
-    - cd ../../..
-    - npx wait-on http://localhost:3000 http://localhost:5000/ping
-    - cd src/my-app
-    - npx cypress run --browser chrome --config baseUrl=http://localhost:3000
-    - kill $BACK_PID
-    - kill $FRONT_PID
+    - |
+      cd src/my-app
+      npm start &
+      FRONT_PID=$!
+      cd src/backend
+      python3 app.py &
+      BACK_PID=$!
+      cd ../../..
+      npx wait-on http://localhost:3000 http://localhost:5000/ping
+      cd src/my-app
+      # Run in a clean subshell to prevent environment contamination
+      (npx cypress run)
+      kill $BACK_PID
+      kill $FRONT_PID
     
   artifacts:
     when: always
