--- a/src/my-app/package.json
+++ b/src/my-app/package.json
@@ -11,13 +11,9 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/user-event": "^13.5.0",
-<<<<<<< HEAD
-    "axios": "^1.7.9",
-=======
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.7",
     "core-js": "^3.41.0",
->>>>>>> phase-2-frontend
     "cors": "^2.8.5",
     "csv-parser": "^3.1.0",
     "date-fns": "^4.1.0",
@@ -50,7 +46,9 @@
     "web-vitals": "^2.1.4"
   },
   "jest": {
-  "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"]
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ]
   },
   "browser": {
     "axios": "^1.6.0"
