fix: add test script for frontend CI
Former-commit-id: fd9e0f6a9034643312dce2d39bb66adc5bbf8a53

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,13 +7,13 @@ test-frontend:
   stage: test-frontend
   image: node:18
   script:
+    - cd src/my-app
     - npm ci
-    - npm run test -- --ci --coverage --passWithNoTests
+    - npm run test -- --coverage
   artifacts:
     paths:
       - src/my-app/coverage/
     expire_in: 1 week
-
 
 # Backend Unit + Integration Tests with Pytest
 test-backend:
