--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,8 @@ test-frontend:
 test-backend:
   stage: test-backend
   image: python:3.11
+  variables:
+    PYTHONPATH: "$CI_PROJECT_DIR/src/my-app/src/backend"
   before_script:
     - cd src/my-app/src/backend
     - pip install --upgrade pip
@@ -32,6 +34,7 @@ test-backend:
     paths:
       - src/my-app/src/backend/.pytest_cache/
     expire_in: 1 week
+
 
 # Cypress E2E Tests
 test-e2e:
