--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,23 +43,23 @@ test-e2e:
   image: cypress/included:14.1.0
   services:
     - name: docker:dind
-      alias: docker
+      command: ["--tls=false"]
+      privileged: true
   variables:
     CYPRESS_baseUrl: http://localhost:3000
   before_script:
     - apt-get update && apt-get install -y curl
     - cd src/my-app
     - npm ci
-    - npm run start &             # Start React app in background
-    - sleep 5                     # Optional: give React some warm-up time
+    - npm run start &             
     - cd src/backend
     - pip install nltk==3.9.1
     - pip install --no-build-isolation -r requirements.txt
-    - python app.py &             # Start Flask app in background
-    - sleep 15                    # Wait for both to start up
+    - python app.py &             
+    - sleep 30
   script:
-    - cd ../../../..              # Back to root before Cypress
-    - npx cypress run
+    - cd src/my-app
+    - npx cypress run --config baseUrl=$CYPRESS_baseUrl
   artifacts:
     when: always
     paths:
