changed cypress tests
Former-commit-id: 3ecbb6d2a67c32c734bfedd3c1ae6295d57c2a83

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ test-e2e:
   services:
     - name: docker:dind
       command: ["--tls=false"]
-      privileged: true
+  privileged: true   # ✅ Move this here!
   variables:
     CYPRESS_baseUrl: http://localhost:3000
   before_script:
