--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,28 +37,32 @@ test-frontend:
 #       - src/my-app/src/backend/.pytest_cache/
 #     expire_in: 1 week
 
+
+
+
+
 # Cypress E2E Tests
-test-e2e:
-  stage: test-e2e
-  image: cypress/included:14.1.0
-  variables:
-    CYPRESS_baseUrl: http://localhost:3000
-  before_script:
-    - apt-get update && apt-get install -y curl
-    - cd src/my-app
-    - npm ci
-    - npm run start &             
-    - cd src/backend
-    - pip install nltk==3.9.1
-    - pip install --no-build-isolation -r requirements.txt
-    - python app.py &             
-    - sleep 30
-  script:
-    - cd src/my-app
-    - npx cypress run --config baseUrl=$CYPRESS_baseUrl
-  artifacts:
-    when: always
-    paths:
-      - cypress/screenshots
-      - cypress/videos
-    expire_in: 1 week
+# test-e2e:
+#   stage: test-e2e
+#   image: cypress/included:14.1.0
+#   variables:
+#     CYPRESS_baseUrl: http://localhost:3000
+#   before_script:
+#     - apt-get update && apt-get install -y curl
+#     - cd src/my-app
+#     - npm ci
+#     - npm run start &             
+#     - cd src/backend
+#     - pip install nltk==3.9.1
+#     - pip install --no-build-isolation -r requirements.txt
+#     - python app.py &             
+#     - sleep 30
+#   script:
+#     - cd src/my-app
+#     - npx cypress run --config baseUrl=$CYPRESS_baseUrl
+#   artifacts:
+#     when: always
+#     paths:
+#       - cypress/screenshots
+#       - cypress/videos
+#     expire_in: 1 week
