--- a/src/my-app/package.json
+++ b/src/my-app/package.json
@@ -73,14 +73,15 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.26.8",
+    "@babel/core": "^7.27.1",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-env": "^7.27.1",
+    "@babel/preset-react": "^7.27.1",
     "@playwright/test": "^1.51.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "babel-jest": "^29.7.0",
+    "babel-loader": "^10.0.0",
     "cypress": "^14.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
@@ -95,6 +96,5 @@
   "main": "craco.config.js",
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+  "license": "ISC"
 }
